# haskell-flake-template

./: .gitignore  README.md  flake.nix
foobar/: foobar.cabal
foobar/app/: Main.hs
foobar/src/: FooBar.hs
